[build-system]
requires = ["setuptools>=62.3.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cardano-nft-vending-machine"
version = "0.5.1-b8"

description = "Library to perform NFT mints automatically on the Cardano blockchain"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]

requires-python = ">=3.8"
dependencies = [
  "Deprecated>=1.2.13",
  "requests>=2.27.1"
]

[project.urls]
Documentation = "https://thaddeusdiamond.github.io/cardano-nft-vending-machine/cardano/"
Source = "https://github.com/thaddeusdiamond/cardano-nft-vending-machine"

[tool.setuptools.packages.find]
where = ["src"] 
include = ["cardano*"] 
exclude = ["cardano.tests*"] 
namespaces = false

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
